# gravity

./: CMakeLists.txt  Movement.cpp  Movement.h  README.md  main.cpp  testAstro.cpp  testCircleAstro.cpp
src/: AstroObject.cpp  AstroObject.h  CircleAstroObject.cpp  CircleAstroObject.h  CircleMovement.cpp  CircleMovement.h  Movement.cpp  Movement.h
